--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "php": "^7.0",
+    "php": "^7.2",
     "api-clients/middleware": "^4.0",
     "joshdifabio/resource-pool": "^0.2.0"
   },
@@ -27,7 +27,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "platform": {
+      "php": "7.2"
+    }
   },
   "scripts": {
     "ensure-installed": "composer install --ansi -n -q",
